Fixed warnings, bugs and JavaDocs